# eop-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
.github/workflows/: check.yml
crates/bifurcate-coordinate/: Cargo.toml
crates/bifurcate-coordinate/src/: bidirectional_bifurcate_coordinate.rs  bifurcate_coordinate.rs  lib.rs
crates/eop-test-suite/: Cargo.toml
crates/eop-test-suite/tests/api/: chapter_7.rs  main.rs
libs/eop/: Cargo.toml
libs/eop/src/: bifurcate_coordinate.rs  lib.rs  trees.rs
libs/eop/src/trees/: tree.rs
src/: bifurcate_coordinate.rs  concepts.rs  lib.rs  main.rs  math.rs  tests.rs  transformations.rs  trees.rs
src/concepts/: binary_op.rs  integer.rs  mod.rs
src/core/: mod.rs  predicates.rs
src/math/: mod.rs  power.rs  power_binary.rs  power_unary.rs
src/transformations/: distance.rs  mod.rs  orbits.rs  transformation.rs
tests/: chapter_02.rs
tests/api_tests/: chapter_02.rs  chapter_03.rs  chapter_07.rs  main.rs
tests/api_tests/chapter_07/: algo_bifu_coord.rs
tests/chapter_07/: algo_bifu_coord.rs
