[workspace.package]
name = "eop-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = ["crates/bifurcate-coordinate", "crates/eop-test-suite", "libs/*"]

[workspace.dependencies]
# local crates
bifurcate-coordinate = { path = "crates/bifurcate-coordinate" }
eop = { version = "0.1.0", path = "libs/eop" }
