[package]
name = "eop"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [workspace]
# members = [
#     "libs/*",
# ]

[dependencies]
env_logger = "0.11.0"
# eop = { version = "0.1.0", path = "libs/eop" }
log = "0.4.14"
